fixing the JUnit Test